# artikulate

./: .arcconfig.license  .clang-format  .flatpak-manifest.json  .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  CONCEPT.md  CONCEPT.txt  COPYING-ARTWORK  COPYING.DOC  Messages.sh  README  README.md  artikulate.appdata.xml  artikulate.desktop  config.h.cmake  logo.png.license  org.kde.artikulate.appdata.xml  org.kde.artikulate.desktop  org.kde.artikulate.desktop.license  snapcraft.yaml  version.h.cmake
autotests/: CMakeLists.txt  testaudio.cpp  testaudio.h  testcoursefiles.cpp  testcoursefiles.h  testlanguagefiles.cpp  testlanguagefiles.h
autotests/course/: test_course.cpp  test_course.h
autotests/courseresource/: resourcerepositorystub.h  test_courseresource.cpp  test_courseresource.h
autotests/editablecourseresource/: resourcerepositorystub.h  test_editablecourseresource.cpp  test_editablecourseresource.h
autotests/editorsession/: editablerepositorystub.h  test_editorsession.cpp  test_editorsession.h
autotests/integrationtests/: CMakeLists.txt
autotests/iresourcerepository_integration/: test_iresourcerepository.cpp
autotests/languageresources/: testlanguagefiles.cpp  testlanguagefiles.h
autotests/mocks/: coursestub.cpp  coursestub.h  editablecoursestub.cpp  editablecoursestub.h  editablerepositorystub.cpp  editablerepositorystub.h  languagestub.cpp  languagestub.h  resourcerepositorystub.cpp  resourcerepositorystub.h
autotests/repository/: test_repository.cpp  test_repository.h
autotests/resourcerepository/: test_resourcerepository.cpp  test_resourcerepository.h
autotests/resourcetests/: CMakeLists.txt
autotests/skeletonresource/: resourcerepositorystub.cpp  resourcerepositorystub.h  test_skeletonresource.cpp  test_skeletonresource.h
autotests/testdata/: testdata.qrc
autotests/trainingsession/: test_trainingsession.cpp
autotests/unittests/: CMakeLists.txt
liblearnerprofile/autotests/: CMakeLists.txt  testlearnerstorage.cpp  testlearnerstorage.h
liblearnerprofile/src/: CMakeLists.txt  learner.cpp  learner.h  learner_p.h  learninggoal.cpp  learninggoal.h  learninggoal_p.h  liblearner_debug.cpp  liblearner_debug.h  liblearnerprofile_export.h  profilemanager.cpp  profilemanager.h  profilemanager_p.h  storage.cpp  storage.h
libsound/src/: CMakeLists.txt  backendinterface.cpp  backendinterface.h  capturebackendinterface.cpp  capturebackendinterface.h  capturedevicecontroller.cpp  capturedevicecontroller.h  libsound_debug.cpp  libsound_debug.h  libsound_export.h  outputbackendinterface.cpp  outputbackendinterface.h  outputdevicecontroller.cpp  outputdevicecontroller.h  qtgstreamerbackend.cpp  qtgstreamercapturebackend.cpp  qtgstreamercapturebackend.h  qtgstreameroutputbackend.cpp  qtgstreameroutputbackend.h  soundbackendinterface.cpp  soundbackendinterface.h
src/: CMakeLists.txt  application.cpp  application.h  artikulate.kcfg  artikulate.knsrc  artikulate.qrc  artikulate_debug.cpp  artikulate_debug.h  artikulatecore_export.h  artikulateui.rc  artikulateui_editor.rc  editor.qrc  editorview.cpp  editorview.h  main.cpp  main_editor.cpp  mainwindow.cpp  mainwindow.h  mainwindow_editor.cpp  mainwindow_editor.h  resources.qrc  settings.kcfgc
src/core/: capturedevicecontroller.cpp  capturedevicecontroller.h  contributorrepository.cpp  contributorrepository.h  course.cpp  course.h  drawertrainingactions.cpp  drawertrainingactions.h  editorsession.cpp  editorsession.h  icourse.h  ieditablecourse.h  ieditablephrase.h  ieditablerepository.h  ieditableunit.h  ilanguage.h  iphrase.h  iresourcerepository.h  isessionactions.h  iunit.h  language.cpp  language.h  outputdevicecontroller.cpp  outputdevicecontroller.h  phoneme.cpp  phoneme.h  phonemegroup.cpp  phonemegroup.h  phrase.cpp  phrase.h  player.cpp  player.h  profile.cpp  profile.h  recorder.cpp  recorder.h  resourcemanager.cpp  resourcemanager.h  resourcerepository.cpp  resourcerepository.h  (+20 more)
src/declarativeitems/: applicationbackground.cpp  applicationbackground.h
src/models/: coursefiltermodel.cpp  coursefiltermodel.h  coursemodel.cpp  coursemodel.h  languagemodel.cpp  languagemodel.h  languageresourcemodel.cpp  languageresourcemodel.h  learningprogressmodel.cpp  learningprogressmodel.h  phonemegroupmodel.cpp  phonemegroupmodel.h  phonememodel.cpp  phonememodel.h  phonemeunitmodel.cpp  phonemeunitmodel.h  phrasefiltermodel.cpp  phrasefiltermodel.h  phraselistmodel.cpp  phraselistmodel.h  phrasemodel.cpp  phrasemodel.h  profilemodel.cpp  profilemodel.h  skeletonmodel.cpp  skeletonmodel.h  syllableunitmodel.cpp  syllableunitmodel.h  taggroupmodel.cpp  taggroupmodel.h  unitfiltermodel.cpp  unitfiltermodel.h  unitmodel.cpp  unitmodel.h
src/qml/: ActionListItem.qml  ArtikulateDrawer.qml  CMakeLists.txt  CheckListItem.qml  CourseConfigurationPage.qml  CourseSelector.qml  CourseSwitcher.qml  DownloadPage.qml  EditCoursePage.qml  Editor.qml  EditorCourseSelectionPage.qml  EditorDrawer.qml  EditorSelector.qml  EditorSkeletonSelectionPage.qml  FlatButton.qml  HomeScreen.qml  LanguageSelector.qml  LanguageSettingsPage.qml  LanguageSwitcher.qml  ListItem.qml  Main.qml  MainMenuBar.qml  MainToolBar.qml  NewUserWelcome.qml  PhonemeUnitSelector.qml  PhraseEditor.qml  PhraseEditorEditStateComponent.qml  PhraseEditorSoundComponent.qml  PhraseEditorTypeComponent.qml  PhraseTypeSelector.qml  ProfileDetailsItem.qml  ProfileDetailsViewFavorites.qml  ProfileDetailsViewUser.qml  ProfileForm.qml  ProfileSelector.qml  ProfileSettingsItem.qml  ProfileSettingsPage.qml  ProfileUserGoalsItem.qml  ProfileUserImageItem.qml  ProfileUserItem.qml  (+24 more)
src/qmlcontrols/: iconitem.cpp  iconitem.h  imagetexturescache.cpp  imagetexturescache.h  managedtexturenode.cpp  managedtexturenode.h
src/ui/: appearencedialogpage.cpp  appearencedialogpage.h  appearencedialogpage.ui  exportghnsdialog.cpp  exportghnsdialog.h  exportghnsdialog.ui  newcoursedialog.cpp  newcoursedialog.h  newcoursedialog.ui  resourcesdialog.cpp  resourcesdialog.h  resourcesdialog.ui  resourcesdialogpage.cpp  resourcesdialogpage.h  resourcesdialogpage.ui  sounddevicedialog.h  (+6 more)
(+257 files in other folders)
